# RuralDoc-v1

./: .env.example  .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  output.txt  progression.py  pyproject.toml  rewards.py  scenarios.py  schema_ER_v1.md  tools.py  validate.py
backend/: Dockerfile  __init__.py  app.py
backend/routes/: extract.py
db/: __init__.py  pool.py  settings.py
db/migrations/: 001_init_schema.sql  002_embed_dims_1024.sql  003_embed_dims_384.sql  006_nlp_extraction_layer 2.sql
dev/: README.md  check_db.py  perf_test.py  validate_cli.py  validate_env.py
dev/runs/: perf_20260423T084516Z.json  perf_20260424T060224Z.json
env/: __init__.py  client.py  environment.py  inference.py  progression.py  rewards.py  scenarios.py  train_grpo.py  validate.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/appointments/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/patients/: page.tsx
frontend/app/patients/[id]/: page.tsx
frontend/app/tester/: page.tsx
frontend/components/: AppointmentList.tsx  Sidebar.tsx  StatCard.tsx  TopNav.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts
models/: __init__.py  schemas.py
nlp/: __init__.py  auto_migrate 2.py  extractor 2.py  extractor.py  llm_client.py  matcher 2.py  pipeline.py  prompt_builder.py  validator.py  vocab 2.py
notebooks/: ruraldoc_grpo_training.ipynb
rag/: __init__.py  embeddings.py  engine.py  engine_pg.py  retriever.py
rural_doc_env/: __init__.py  client.py  inference.py  progression.py  rewards.py  scenarios.py  validate.py
rural_doc_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: seed_embeddings.py  seed_knowledge.py  seed_nlp_test 2.py  seed_scenarios.py  train_grpo.py  validate.py
server/: Dockerfile  app.py  environment.py  requirements.txt
