[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rural-doc-env"
version = "0.1.0"
description = "Rural Indian PHC clinical reasoning simulator — openenv-compatible RL environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.0",
    "psycopg[binary,pool]>=3.2",
]

[project.scripts]
ruraldoc-server = "backend.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "db*", "env*", "models*", "rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
