[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rural-doc-env"
version = "0.1.0"
description = "Rural Indian PHC clinical reasoning simulator — openenv-compatible RL environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
grpo = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "trl>=0.9.0",
    "accelerate>=0.30.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rural_doc_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]